--- a/src/DatePicker/styles/index.less
+++ b/src/DatePicker/styles/index.less
@@ -158,10 +158,6 @@
       .calendar-cell-selected-hover();
     }
 
-    .rs-calendar-month-dropdown-scroll {
-      height: 227px;
-    }
-
     .rs-calendar-time-dropdown-column > ul {
       height: 198px;
     }
